test/arrays/diten/array-as-vec-bounds-checking.0-4.good
array-as-vec-bounds-checking.chpl:22: error: halt reached - remove at position 7 out of bounds
